Fix z-index of context menu

--- a/website/scss/app.scss
+++ b/website/scss/app.scss
@@ -232,3 +232,7 @@ $panGrey: #bbbbbb;
   word-wrap: break-word;
   white-space: normal;
 }
+
+.zminus1 {
+  z-index: -1;
+}
